Added logging-starter